JumpScript/tests/baselines/reference/decoratorOnClass8.errors.txt
tests/cases/conformance/decorators/class/decoratorOnClass8.jump(3,1): error TS1238: Unable to resolve signature of class decorator when called as an expression.


==== tests/cases/conformance/decorators/class/decoratorOnClass8.jump (1 errors) ====
    declare function dec(): (target: Function, paramIndex: number) => void;
    
    @dec()
    ~~~~~~
!!! error TS1238: Unable to resolve signature of class decorator when called as an expression.
    class C {
    }